# mindow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  note4ai.md
.github/workflows/: release-gui.yml  release.yml
ai/: Cargo.toml
ai/src/: baseline.rs  client.rs  config.rs  knowledge.rs  prompt.rs  report.rs  sse.rs  websearch.rs
core/: Cargo.toml
core/src/: collector.rs  config.rs  filter.rs  lib.rs  rule_engine.rs  trend_store.rs  types.rs
core/tests/: properties.rs
core/tests/properties/: alert_props.rs  config_props.rs  filter_props.rs  mod.rs  path_props.rs  rule_battery_props.rs  rule_high_cpu_props.rs  rule_memory_leak_props.rs  rule_memory_pressure_props.rs  trend_buffer_props.rs
mindow-app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tr.json  vite.config.ts
mindow-app/src/: App.tsx  main.tsx
mindow-app/src-tauri/: Cargo.toml  tauri.conf.json
mindow-app/src-tauri/capabilities/: default.json
mindow-app/src-tauri/icons/: icon.icns
mindow-app/src-tauri/src/: ai_bridge.rs  commands.rs  global_shortcut.rs  history_db.rs  icons.rs  main.rs  notifications.rs  sampling.rs  state.rs  system_ops.rs  window_state.rs
mindow-app/src/__tests__/: BaselineTag.test.tsx  ProcessTable.test.tsx  SearchBar.test.tsx  SettingsPage.test.tsx  Toast.test.tsx  setup.ts
mindow-app/src/__tests__/properties/: design-tokens.prop.test.ts  focus-visible.prop.test.tsx  format.prop.test.ts  heat.prop.test.ts  markdown.prop.test.tsx  process-search.prop.test.ts  textarea-autogrow.prop.test.ts  toast.prop.test.tsx
mindow-app/src/components/: AIChat.tsx  BaselineTag.tsx  ContextMenu.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  PerformanceChart.tsx  ProcessIcon.tsx  ProcessTable.tsx  ProcessTree.tsx  ResizeHandles.tsx  SearchBar.tsx  SidePanel.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx  icons.tsx
mindow-app/src/hooks/: useProcessIcon.ts  useTauriEvent.ts
mindow-app/src/i18n/: en.json  index.ts  zh.json
mindow-app/src/lib/: constants.ts  format.test.ts  format.ts  heat.test.ts  heat.ts
mindow-app/src/pages/: AIPage.tsx  PerformancePage.tsx  ProcessesPage.tsx  SettingsPage.tsx
mindow-app/src/stores/: performanceStore.ts  processStore.test.ts  processStore.ts  settingsStore.ts
mindow-app/src/styles/: globals.css
mindow-app/src/types/: index.ts
mindow-cli/: Cargo.toml
mindow-cli/src/: interactive.rs  main.rs  renderer.rs
mindow-cli/src/ai/: baseline.rs  client.rs  knowledge.rs  mod.rs  prompt.rs  sse.rs  websearch.rs
mindow-cli/tests/: cli_tests.rs  properties.rs
