[package]
name = "mindow-ai"
version = "1.2.3"
edition = "2021"
description = "AI integration module for Mindow: LLM clients, knowledge base, baseline learning"

[dependencies]
mindow-core = { path = "../core" }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
async-trait = "0.1"
futures-util = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
