[package]
name = "mindow-cli"
version = "0.5.0"
edition = "2021"
description = "CLI binary for Mindow: status and watch commands"

[[bin]]
name = "mindow"
path = "src/main.rs"

[dependencies]
mindow-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
terminal_size = "0.4"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
