[package]
name = "mindow-cli"
version = "0.9.3"
edition = "2021"
description = "CLI binary for Mindow: status and watch commands"

[[bin]]
name = "mindow"
path = "src/main.rs"

[dependencies]
mindow-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
terminal_size = "0.4"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
async-trait = "0.1"
futures-util = "0.3"
dialoguer = "0.11"
indicatif = "0.17"
urlencoding = "2"
rustyline = "14"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
mockito = "1"
tempfile = "3"
