[package]
name = "mindow-app"
version = "0.1.0"
edition = "2021"
description = "Mindow Desktop GUI - Windows system resource analyzer"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
mindow-core = { path = "../../core" }
mindow-ai = { path = "../../ai" }
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
proptest = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
